<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home">

    <View
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/zcashWhite_24"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hit_area_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <View
        android:id="@+id/hit_area_exit"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:alpha="0.3"
        android:background="@android:color/transparent"
        android:elevation="6dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_hit_area_top" />

    <ImageView
        android:id="@+id/icon_exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_settings_back"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:layout_constraintWidth_percent="0.08"
        app:srcCompat="@drawable/ic_cancel"
        app:tint="@color/colorAccent" />


    <TextView
        android:id="@+id/text_title"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/settings_change_lightwalletd_server"
        android:textColor="@color/text_light"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/icon_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hit_area_exit"
        app:layout_constraintTop_toTopOf="@id/icon_exit" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_host"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/settings_server_address"
        app:errorEnabled="true"
        app:helperText="@string/settings_host_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintWidth_percent="0.84">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:imeOptions="actionNext"
            android:maxLength="253"
            android:singleLine="true"
            android:textColor="@color/text_light"
            android:textColorHint="@color/text_light_dimmed" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/settings_server_port"
        app:errorEnabled="true"
        app:helperText="@string/settings_port_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_host"
        app:layout_constraintWidth_percent="0.84">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="number"
            android:maxLength="5"
            android:textColor="@color/text_light"
            android:textColorHint="@color/text_light_dimmed" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        style="@style/Zcash.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings_reset"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/selector_secondary_button_activatable"
        app:layout_constraintEnd_toStartOf="@id/button_update"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_port"
        app:strokeColor="@color/selector_secondary_button_activatable" />

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/button_reset"
        app:layout_constraintStart_toStartOf="@id/icon_exit"
        app:layout_constraintTop_toTopOf="@id/button_reset"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_update"
        style="@style/Zcash.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/settings_update"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toEndOf="@id/text_input_layout_host"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_port" />

    <CheckBox
        android:id="@+id/streetMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layoutDirection="rtl"
        android:text="@string/translated_street_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStreetMode" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="loading_progress,loading_view" />

    <TextView
        android:id="@+id/serverChangeNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:text="@string/translated_server_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_update" />

    <TextView
        android:id="@+id/textViewStreetMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Other Settings"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverChangeNote" />


</androidx.constraintlayout.widget.ConstraintLayout>